Fixed rendering for meter values to align with decibel values.

--- a/sw/static/src/main.styl
+++ b/sw/static/src/main.styl
@@ -31,9 +31,7 @@ body.channel-active #channel
     position relative
     .meter
         width 20px
-        height (fader-height - name-height - grip-height)
         position absolute
-        top (grip-height / 2)
         left 0
     .groove
         background black
@@ -84,4 +82,3 @@ body.channel-active #channel
         //.freq
         //.gain
         //.q
-
